# templates

./: LICENSE  README.md  default.nix  henforcer.toml  shell.nix  templates.cabal  templates.cabal~
doc-gen/: Main.hs
src/Templates/: DomExtras.hs  Types.hs
src/Templates/Partials/: Buttons.hs  Checkbox.hs  Containers.hs  Errors.hs  Image.hs  Inputs.hs  Invitebar.hs  Lists.hs  Message.hs  Modal.hs  Searchbar.hs  Shapes.hs
src/Templates/Partials/Containers/: Dropdown.hs
test/: Main.hs
