name: templates
version: 0.1.0.0
cabal-version: >= 1.8
build-type: Simple


library
    hs-source-dirs:   src
    exposed-modules: Templates.Partials.Buttons
                     Templates.Partials.Image
                     Templates.Partials.Containers
                     Templates.Partials.Inputs
                     Templates.Partials.Lists
                     Templates.Partials.Searchbar
                     Templates.Partials.Errors
                     Templates.Partials.Invitebar
                     Templates.Types
    
  default-extensions:
    ConstraintKinds
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiParamTypeClasses
    -- OverloadedStrings
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    TemplateHaskell

  build-depends: base
               , ClasshSS
               , reflex-classhss
               , reflex-dom
               , containers
               , data-default
               , text