name: templates
version: 0.1.0.0
cabal-version: >= 1.10
build-type: Simple


library
    hs-source-dirs:   src
    exposed-modules: Templates.Partials.Buttons
                     Templates.Partials.Checkbox
                     Templates.Partials.Image
                     Templates.Partials.Containers
                     Templates.Partials.Containers.Dropdown
                     Templates.Partials.Inputs
                     Templates.Partials.Lists
                     Templates.Partials.Modal
                     Templates.Partials.Searchbar
                     Templates.Partials.Shapes
                     Templates.Partials.Errors
                     Templates.Partials.Invitebar
                     Templates.Types
                     Templates.DomExtras

    default-extensions:
        ConstraintKinds
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        LambdaCase
        MultiParamTypeClasses
        RankNTypes
        RecursiveDo
        ScopedTypeVariables
        TemplateHaskell

    build-depends: base
               , ClasshSS
               , containers
               , data-default
               , filepath
               , lens
               , reflex-classhss
               , reflex-dom-core
               , text
